[tool.poetry]
name = "gameofthronesrpg"
version = "0.1.0"
description = ""
authors = ["tiagomosantos <tiago.moco.santos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyQt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
